src/fluxcd/infra/traefik/hooks-post/ingresses.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.ryanb.tv`) && !Path(`/ping`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.ryanb.tv`) && Path(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
  tls: {}
