src/fluxcd/infra/traefik/hooks-post/minio.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-web
  namespace: traefik
spec:
  type: ExternalName
  externalName: "s3.ff.lan."
  selector:
    app.kubernetes.io/name: minio
  ports:
  - name: http
    protocol: TCP
    port: 9001
    targetPort: 9001

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-web
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.ryanb.tv`)
      kind: Rule
      services:
        - name: minio-web
          kind: Service
          port: http
  tls: {}

---
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
  namespace: traefik
spec:
  type: ExternalName
  externalName: "s3.ff.lan."
  selector:
    app.kubernetes.io/name: minio
  ports:
  - name: http
    protocol: TCP
    port: 9000
    targetPort: 9000

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.ryanb.tv`)
      kind: Rule
      services:
        - name: minio-s3
          kind: Service
          port: http
  tls: {}
